<resources>
    <string name="app_name">Incit</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_loading">Incit</string>
    <string name="txt_Loading">Bienvenido</string>

    <string name="title_activity_maps_incident">Map</string>
    <string name="texto_botonmapa_volver">VOLVER</string>
    <string name="texto_botonmapa_myPosition">Mi Posición</string>
    <string name="txt_radio">Radio de busqueda</string>
    <string name="desc">Imagen del logo</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="txt_ciudad_header">" "</string>
    <string name="txt_clima_header">" "</string>
    <string name="title_activity_map_once_incident">Map</string>

    <string name="action_share">Compartir</string>
    <string name="title_activity_maps_incident_radio">Map</string>
    <string name="lbl_btn1">FILTRADOS</string>
    <string name="lbl_btn2">LISTA</string>
    <string name="lbl_btn3">MAPA</string>
    <string name="action_about">About</string>
</resources>
