<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--   Header   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/fondo_header"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingLeft="16dp"
        android:weightSum="10"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo3" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="7">

            <TextView
                android:id="@+id/lbl_header_appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/letra_header"
                android:fontFamily="sans-serif"
                android:textSize="24sp"
                android:text="@string/app_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                android:id="@+id/header_ciudad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/letra_header"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:text="@string/txt_ciudad_header"/>

                <TextView
                    android:id="@+id/lbl_temp_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/letra_header"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:paddingLeft="20dp"
                    android:text="@string/txt_clima_header"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:background="@color/fondo_header">



            <ImageButton
                android:id="@+id/btn_action_setting"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/ic_more_vert"
                android:background="@color/fondo_header"
                android:paddingLeft="50dp"
                android:layout_alignParentTop="true" />

        </LinearLayout>

    </LinearLayout>

    <!--   Buttons   -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@color/fondo_header">


        <Button
            android:id="@+id/boton_lista_header1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_btn2"
            android:background="@drawable/map_button_press"
            style="@style/button_map_text"/>

        <Button
            android:id="@+id/boton_mapa_header1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_btn3"
            android:background="@drawable/map_button2"
            style="@style/button_map_text"/>


    </LinearLayout>

    <!-- LISTA -->
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list">
    </ListView>

    <TextView android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@android:id/empty" />

</LinearLayout>
